# PTX4CPU

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: c-cpp.yml
code/: CMakeLists.txt
code/core/emulator/: CMakeLists.txt  TODO.md
code/core/emulator/api/: emulator_api.cpp  emulator_api.h
code/core/emulator/api/export/: README.md  api_types.h  emulator_api.h
code/core/emulator/api/export/emulator/: emulator_interface.h
code/core/emulator/api/export/utils/: api_types.h  base_types.h
code/core/emulator/emulator/: emulator.cpp  emulator.h  emulator_interface.cpp  emulator_interface.h
code/core/emulator/parser/: executor.h  parser.cpp  parser.h  parser_data.h  parser_types.h
code/core/emulator/parser/arg_parsers/: arg_parsers.cpp  arg_parsers.h
code/core/emulator/parser/arg_parsers/json_parser/: parser.h
code/core/emulator/parser/base/: TODO.md  block.h  element.h  instruction.h  utils.h  variable.h
code/core/emulator/parser/executor/: dispatch_table.cpp  dispatch_table.h  executor.cpp  executor.h  instruction.cpp  instruction.h  instruction_runner.cpp  instruction_runner.h
code/core/emulator/parser/executor/runners/: CMakeLists.txt  base.cpp  math.cpp  memory.cpp  runner.h
code/core/emulator/parser/ext_parsers/: ext_parsers.cpp  ext_parsers.h
code/core/emulator/parser/ext_parsers/json_parser/: parser.h
code/core/emulator/parser/json_parser/: README.md  parser.h
code/core/emulator/parser/types/: parser_data.cpp  parser_data.h  ptx_function.cpp  ptx_function.h  ptx_instruction.h  ptx_types.cpp  ptx_types.h  virtual_var.cpp  virtual_var.h
code/core/emulator/translator/: translator.cpp  translator.h  translator_interface.cpp  translator_interface.h
code/core/emulator/utils/: CMakeLists.txt  base_types.h  iterator.h  iterator.inl  result.h  string_utils.h  validator.h  version.cpp  version.h
code/core/emulator/utils/string_ext/: container_types.h  string_iterator.cpp  string_iterator.h  string_iterator.inl  string_types.h
code/core/interfaces/emulator_cmd/: CMakeLists.txt  README.md  emulator_cmd.cpp  logo_ascii.h  translator_cmd.cpp
code/core/interfaces/emulator_interface/: TODO.md
code/core/interfaces/translator_cmd/: CMakeLists.txt  logo_ascii.h  translator_cmd.cpp
code/host_emulator/: CMakeLists.txt  event_handler.cpp  event_handler.h  runtime_def.cpp  runtime_def.h
code/test/: CMakeLists.txt  README.md  TODO.md  rel_add_op.cpp  rel_add_op.h  rel_add_op_const.cpp  rel_add_op_const.h  tests.cpp  tests.h  utils.cpp  utils.h  vadd_with_const.cpp  vadd_with_const.h
code/tool/: CMakeLists.txt  emulator_main.cpp
code/utils/: debug.h  helpers.h
code/utils/cmd_parser/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.h
code/utils/logger/: log_color.h  logger.h
docs/building/: build_instruction.md
docs/core_functionality/: architecture.md
docs/usage/: usage_instruction.md
ext/cuda_exe_samples/: matmul.cu  vadd_with_const.cu
ext/cuda_ptx_samples/: rel_add_op.json  rel_add_op.ptx  rel_add_op_const.ptx  simple.ptx  temp_rel_add_op.cpp
